--- a/gb/6/6/30/n1368413.md
+++ b/gb/6/6/30/n1368413.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jokqkt383/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jokqkt383/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jokqkt383/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jokqkt383/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>欧委会召开中国人权论坛 谴活摘器官</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2006/06/606300659071789-600x400.jpg" />
 <h6>“近看中国环境污染和人权状况论坛”在欧洲委员会举行（大纪元）
 </h6>
 <hr>
-	<p>【大纪元6月30日讯】（大纪元记者石芳，王泓斯特拉斯堡报导）<ahref="https://github.com/jokqkt383/djy/blob/master/gb/tag/%E6%AC%A7%E6%B4%B2.md#1">欧洲</a>委员会第三次例会本周在法国的斯特拉斯堡举行。由<ahref="https://github.com/jokqkt383/djy/blob/master/gb/tag/%E7%91%9E%E5%85%B8.md#1">瑞典</a>议员代表团林德布劳德先生主持的“近看中国环境污染和人权状况论坛”于周二下午在第七会议厅召开，中国环境污染和中共劳教所内活体<ahref="https://github.com/jokqkt383/djy/blob/master/gb/tag/%E5%99%A8%E5%AE%98.md#1">器官</a>摘除黑幕成为焦点议题。该论坛得到多个国际人权组织和议员的支持及响应。</p>
+	<p>【大纪元6月30日讯】（大纪元记者石芳，王泓斯特拉斯堡报导）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%AC%A7%E6%B4%B2.md#1">欧洲</a>委员会第三次例会本周在法国的斯特拉斯堡举行。由<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%91%9E%E5%85%B8.md#1">瑞典</a>议员代表团林德布劳德先生主持的“近看中国环境污染和人权状况论坛”于周二下午在第七会议厅召开，中国环境污染和中共劳教所内活体<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%99%A8%E5%AE%98.md#1">器官</a>摘除黑幕成为焦点议题。该论坛得到多个国际人权组织和议员的支持及响应。</p>
 <p><center></p>
 <table cellpadding=3 cellspacing=3 border=0>
 <tr>
 <td align=center><ahref=https://www.epochtimes.com/i6/606292100301789.jpg><img src=https://www.epochtimes.com/i6/606292100301789--ss.jpg></a></td>
 </tr>
 <tr>
-<td align=center><span class=bn12><ahref="https://github.com/jokqkt383/djy/blob/master/gb/tag/%E7%91%9E%E5%85%B8.md#1">瑞典</a>议员林德布劳德先生主持“近看中国环境污染和人权状况论坛”（大纪元记者王莉莉摄影）</span></td>
+<td align=center><span class=bn12><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%91%9E%E5%85%B8.md#1">瑞典</a>议员林德布劳德先生主持“近看中国环境污染和人权状况论坛”（大纪元记者王莉莉摄影）</span></td>
 </tr>
 </table>
 <p></center></p>
@@ -30,7 +30,7 @@
 <p>瑞典、比利时、俄罗斯、拉脱维亚和波兰等10多个国家的议会代表团的代表参加了会议。林德布劳德先生向与会者介绍了来自五个国家的讲演人。他们中有中国问题专家、教授及国际人权组织的代表。</p>
 <p><b>专家学者的论述</b></p>
 <p>现任一家跨国公司销售副总裁兼国际人权协会理事的曼杨先生以“经济发展和人权迫害”为题，论述了中共出于巩固其政权的需要，在毁坏了中国的经济基础后，又“发展”经济的过程。这期间，几千万的中国人民丧失了生命。他说：“为了夺权和掌权，中共会使用各种邪恶的手段来镇压不同政见者和信仰者。”</p>
-<p>他举例说：“2006年3月以来，不断有证人指控中共大规模活体摘取法轮功学员<ahref="https://github.com/jokqkt383/djy/blob/master/gb/tag/%E5%99%A8%E5%AE%98.md#1">器官</a>牟取暴利，并焚尸灭迹。证人指证，在中国至少有36个集中营和大量劳教所非法关押的法轮功学员，被用于活体器官移植，参与的人员涉及中共高层、军方和武警、医院等。证人披露仅在沈阳苏家屯一个医院，就有数千人被虐杀。许多法轮功学员在被使用很少麻醉剂的情况下就被推向手术台，有人把他们的眼角膜、肾脏、肝脏等摘除，卖给国际移植中心牟取暴利。甚至为避开调查，这些法轮功学员还可以被随时转移。”</p>
+<p>他举例说：“2006年3月以来，不断有证人指控中共大规模活体摘取法轮功学员<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%99%A8%E5%AE%98.md#1">器官</a>牟取暴利，并焚尸灭迹。证人指证，在中国至少有36个集中营和大量劳教所非法关押的法轮功学员，被用于活体器官移植，参与的人员涉及中共高层、军方和武警、医院等。证人披露仅在沈阳苏家屯一个医院，就有数千人被虐杀。许多法轮功学员在被使用很少麻醉剂的情况下就被推向手术台，有人把他们的眼角膜、肾脏、肝脏等摘除，卖给国际移植中心牟取暴利。甚至为避开调查，这些法轮功学员还可以被随时转移。”</p>
 <table border=0 align=center>
 <tr>
 <td><center></p>
@@ -71,7 +71,7 @@
 </table>
 <p></center></p>
 <p>戴志珍带6岁的女儿法度以亲身经历揭露中共暴行。她的丈夫因不放弃修炼法轮功，而被迫害致死。在结束发言时她说：“我想强调几点：警察是当着我和小女儿的面于2001年1月初从我们的家里把他抓走的。那时他是一个年仅34岁、身体强壮的中年人。我在不得已的情况下，带着女儿随即回到澳大利亚。</p>
-<p>谁知，那是我最后一次见到活着的丈夫。两个星期后，我在网上看到他被迫害致死的消息。澳大利亚外交部，通过与中国政府交涉，将它的骨灰带到了澳洲。直到现在，我不知道被警察带走后，他经历过了什么样的待遇。他也许死于酷刑，也许死于活体器官摘除。我呼吁<ahref="https://github.com/jokqkt383/djy/blob/master/gb/tag/%E6%AC%A7%E6%B4%B2.md#1">欧洲</a>委员会和在座的所有的人，协助我们停止这场迫害对法轮功学员的迫害。”</p>
+<p>谁知，那是我最后一次见到活着的丈夫。两个星期后，我在网上看到他被迫害致死的消息。澳大利亚外交部，通过与中国政府交涉，将它的骨灰带到了澳洲。直到现在，我不知道被警察带走后，他经历过了什么样的待遇。他也许死于酷刑，也许死于活体器官摘除。我呼吁<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%AC%A7%E6%B4%B2.md#1">欧洲</a>委员会和在座的所有的人，协助我们停止这场迫害对法轮功学员的迫害。”</p>
 <p><b>与会记者的关注</b></p>
 <p>论坛进行期间，有多家媒体到场。一位欧盟记者提出了她很关心的一个问题：欧盟主席和部分官员将要去西藏考察，他们应当怎样做？</p>
 <p>讲演者们回答：中共很会造假。如果在中共的导演下去访问，那根本看不到，也听不到真相。他们希望赴中国考察的欧盟官员能够赴德国总理梅克尔女士和欧洲议会副主席爱德华·麦克米兰-斯考特先生的后尘，自己安排会见受迫害者和受迫害团体的代表，以便能了解一些真实的情况。</p>
@@ -89,7 +89,7 @@
 </tr>
 </table>
 <p></center></p>
-<p>欧洲委员会成立于1949年5月5日，总部设在法国的斯特拉斯堡。其宗旨是维护民主及人权。欧洲的47个国家，除白俄罗斯外，均为<ahref="https://github.com/jokqkt383/djy/blob/master/gb/tag/%E6%AC%A7%E5%A7%94%E4%BC%9A.md#1">欧委会</a>的成员国。欧洲委员会的最高决策和执行机构是由各成员国外长组成的部长理事会，由各成员国派出的常驻代表组成的部长代表委员会负责处理日常事务。欧洲人权法庭为欧洲委员会的下设组织。</p>
+<p>欧洲委员会成立于1949年5月5日，总部设在法国的斯特拉斯堡。其宗旨是维护民主及人权。欧洲的47个国家，除白俄罗斯外，均为<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%AC%A7%E5%A7%94%E4%BC%9A.md#1">欧委会</a>的成员国。欧洲委员会的最高决策和执行机构是由各成员国外长组成的部长理事会，由各成员国派出的常驻代表组成的部长代表委员会负责处理日常事务。欧洲人权法庭为欧洲委员会的下设组织。</p>
 <p><b>附﹕国际人权无疆界组织声明（译文）</b></p>
 <p>自从1999年7月20日中华人民共和国政府禁止法轮功以来，国际社会一直在关注这一宗教运动。许多报告都在揭示和谴责在中国对法轮功成员的严重迫害。</p>
 <p>本年初，有人引证中国当局对被关押的法轮功人士的器官摘取的数量成倍增长。</p>
@@ -110,41 +110,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/6/6/27/n1364398.md#1">加活摘器官调查组会晤中领馆 独立调查未果</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/6/6/28/n1365643.md#1">加拿大调查组叩关查活摘器官受阻</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/6/6/28/n1366480.md#1">澳洲人死后捐献器官热潮持续降温</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/6/6/29/n1366916.md#1">活摘器官曝光百日 多国官方开始谴责</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/6/6/27/n1364398.md#1">加活摘器官调查组会晤中领馆 独立调查未果</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/6/6/28/n1365643.md#1">加拿大调查组叩关查活摘器官受阻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/6/6/28/n1366480.md#1">澳洲人死后捐献器官热潮持续降温</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/6/6/29/n1366916.md#1">活摘器官曝光百日 多国官方开始谴责</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/9/n11709371.md#1" target="_blank">袁斌：汉学家林培瑞认清中共谎言的觉醒之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/1/n3859798.md#1" target="_blank">乡音：这样的菜农越多越好</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/31/n10821837.md#1" target="_blank">林辉：文革偷听“敌台”让一些中国人觉醒</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/23/n10871477.md#1" target="_blank">感恩节 来自西方人的最美好心愿</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/5/28/n12983090.md#1">【未解之谜】神话还是真相？三星堆与山海经</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/5/28/n12982017.md#1">瘟神散疫失误错杀人 轮回堕凡间偿罪</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/1/n12992137.md#1">【忠义传】以身挡敌 曹操的首席保镖典韦</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12997286.md#1">【小宇宙传说】古代瘟疫启示：一些人不染疫</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/1/n12990856.md#1">他们生前为乞丐 为何死后能升天</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n13000140.md#1">【秦鹏直播】谁是石的外国帮凶 蓬佩奥打开蠕虫罐</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n12999710.md#1">【财商天下】风过去了？大陆猪价闪崩</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12997286.md#1">【小宇宙传说】古代瘟疫启示：一些人不染疫</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12994862.md#1">世卫将科兴疫苗纳紧急使用 中共被曝忽悠民众</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12996124.md#1">几种含丰富营养的超级食品 值得花钱</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/2/n12994576.md#1">【新闻看点】广州升级防控 中共威胁“核战”</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/2/n12994441.md#1">刘诗诗半夜急电袁弘 要求帮吴奇隆做一件小事</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12997045.md#1">邓紫棋中国献唱疑自我审查 敏感字眼遭修改歌词</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n12999803.md#1">胡歌观看前女友演音乐剧 分手12年再传复合？</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n12998687.md#1">网友致谢“去日本买爆报恩” 日女星：好可爱　</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n12997444.md#1">晒1岁儿子爬沙发视频 章子怡配文温馨感人</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12996124.md#1">几种含丰富营养的超级食品 值得花钱</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12995185.md#1">为了救小狗 美国17岁少女把母熊推出墙外</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12997286.md#1">【小宇宙传说】古代瘟疫启示：一些人不染疫</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n12997785.md#1">新冠疫苗3大副作用 医师教你简单方法缓解</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12996569.md#1">糖化让你变老、生病！改变烹调方式降糖化12倍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11968465.md#1">【拍案惊奇】习近平有险？三峡大坝被爆危机</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11970524.md#1">台湾目前有4万多居家检疫者 双北市占近半数</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11970106.md#1">北市寻陈先生 北京返台失联 手机空号留假地址</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11970667.md#1">任志强视频热传 批中共体制烂透 吁国人推墙</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11970670.md#1">华春莹找上美国务院发言人辩论 又遭漏底</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/25/n11973180.md#1">辛龙憔悴赴灵堂 瞒着女儿说：妈妈去旅行了</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/25/n11973870.md#1">辛龙灵堂伴妻5小时 双手合十离开未受访</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11964501.md#1">湖北病例零增长？台湾网红:中共谎言害惨世界</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962482.md#1">《推背图》第7象归序 谈庚子流年</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】“上帝之鞭”：欧洲黑死病</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/14/n11939926.md#1">现世报：危机窥伺中得恩报 毫无预警下遭恶报</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11967225.md#1">成规模毁灭事件中的悬案 明朝王恭厂大爆炸</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jokqkt383/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jokqkt383/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/6/6/30/n1368413.htm">欧委会召开中国人权论坛 谴活摘器官</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/6/6/30/n1368413.htm">欧委会召开中国人权论坛 谴活摘器官</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jokqkt383/djy/blob/master/gb/6/6/30/n1368413.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jokqkt383/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jokqkt383/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jokqkt383/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/6/6/30/n1368413.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
